buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'

version = '1.0'
group = 'com.yourname.modid'
archivesBaseName = 'modid'

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

minecraft {
    mappings channel: 'snapshot', version: '20201028-1.16.3'

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            property 'forge.logging.markers', 'SCAN'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            jvmArgs = [
                    "--add-exports=java.base/sun.security.util=ALL-UNNAMED",
                    "--add-opens=java.base/java.util.jar=ALL-UNNAMED"
            ]

            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            jvmArgs = [
                    "--add-exports=java.base/sun.security.util=ALL-UNNAMED",
                    "--add-opens=java.base/java.util.jar=ALL-UNNAMED"
            ]

            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.26'

    // curse.maven:<descriptor>-<projectid>:<fileid>
    implementation fg.deobf("curse.maven:obfuscate-289380:3336021")
    implementation fg.deobf("curse.maven:mrcrayfishs-gun-mod-289479:3553336")
    implementation fg.deobf("curse.maven:jei-238222:3681294")
    implementation fg.deobf("curse.maven:mekanism-268560:3659389")

    implementation fg.deobf("curse.maven:worldedit-225608:3283693")
}

apply from: 'mcreator.gradle'

